refs #242 Add english sentenses in tutorial page

--- a/app/views/pages/tutorial.html.erb
+++ b/app/views/pages/tutorial.html.erb
@@ -1,6 +1,10 @@
 <h3>使い方</h3>
-「好みの設定」タブからタグを登録すると１分弱で抽出画像がホーム画面に表示されます。<br />
+「Preferences」タブからタグを登録すると１分弱以内に抽出画像がホーム画面に表示されます。<br />
+You can browse images related tags, which you can follow in the 'Preference' page.<br />
+After you follow a tag, the system will display the related images at least in one minute.
 <br />
 <h3>注意</h3>
 　開発中なので、高頻度で予告無しにDBをリセットします。<br />
-その際にお気に入り画像・登録タグは消去されるのでご注意ください。
+その際にお気に入り画像・登録タグは消去されるのでご注意ください。<br />
+I reset the database quite often, since it's currently under development.<br />
+Please note that your tags and clipped images are deleted when that happens.
