refs #229 Fix templates related to the top page

--- a/app/views/pages/signup_with_password.html.erb
+++ b/app/views/pages/signup_with_password.html.erb
@@ -1,14 +1,21 @@
+<h1><strong>Ispick v0.3</strong></h1>
+<p>Ispick is an illustration aggregation service!</p>
+
+<div class="top-image">
+  <%= link_to (image_tag asset_path('top_madoka.jpg')), '/', style: " z-index: 1;"%>
+</div>
+
 <div class="wrapper-oauth">
   <div class="btn-group-vertical btn-group-oauth">
     <%= button_group do %>
-      <%= bs_button_to 'Facebookでアカウント作成', user_omniauth_authorize_path(:facebook), class: "btn btn-default btn-block" %><br>
-      <%= bs_button_to 'Twitterでアカウント作成', user_omniauth_authorize_path(:twitter), class: "btn btn-default btn-block" %><br>
-      <%= bs_button_to 'Pinterestでアカウント作成', '/', class: "btn btn-default btn-block" %><br>
-      <%= bs_button_to 'メールアドレスでアカウント作成', '/sign_up', class: "btn btn-default btn-block" %><br>
+      <%= bs_button_to 'Create an account with Facebook', user_omniauth_authorize_path(:facebook), class: "btn btn-default btn-block" %><br>
+      <%= bs_button_to 'Create an account with Twitter', user_omniauth_authorize_path(:twitter), class: "btn btn-default btn-block" %><br>
+      <%= bs_button_to 'Create an account with Pinterest', '/', class: "btn btn-default btn-block" %><br>
+      <%= bs_button_to 'Create an account with Email', '/sign_up', class: "btn btn-default btn-block" %><br>
     <% end %>
   </div>
   <br>
   <div align="center">
-    <%= link_to '既にアカウントをお持ちの方はこちら', '/signin_with_password' %>
+    <%= bs_button_to 'Login', '/signin_with_password', class: 'btn-mini btn-default' %>
   </div>
 </div>
