--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -23,13 +23,27 @@
 .wrapper-sign-in {
   position  : relative;
   width     : 300px;
-  height    : 500px;
+  height    : 450px;
   background-color : #E4F5F5;
   margin    : 10;
   padding   : 10px;
   border    : 10px;
   overflow  : hidden;
+  z-index   : 2;
 }
+.link-sign-in a {
+  color: #000;
+  text-decoration: none;
+  &:visited {
+    color: #000;
+  }
+  &:hover {
+    color: #000;
+    background-color: #E4F5F5;
+    text-decoration: underline;
+  }
+}
+
 .btn-group-oauth {
   width     : 280px;
 }
