refs #242 Fix texts

--- a/app/views/users/show_target_words.html.erb
+++ b/app/views/users/show_target_words.html.erb
@@ -14,7 +14,7 @@ Find a tag from the database:
 <br />
 <br />
 
-<h3>List of following tags</h3>
+<h3>List of followed tags</h3>
 <div class="tag-list">
 <table class="table table-striped">
   <thead>
