--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,9 +13,11 @@
  *= require scaffolds
  *= require users
  *= require core
- *= require welcome
  *= require bootstrap-datepicker3
  *= require rails_bootstrap_forms
+ *= require font-awesome
+ *= require common
+ *= require welcome
  *
  */
 
