--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1,25 +1,102 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import "common";
 
-.top-image {
-  position  : relative;
-  width     : 400px;
-  height    : 300px;
-  float     : left;
-  z-index   : 1;
+#welcome {
+  #welcome-image {
+    @include span-columns(8);
+  }
+  #auth-form {
+    @include span-columns(4);
+  }
 }
-.wrapper-oauth {
-  position  : relative;
-  width     : 300px;
-  height    : 300px;
-  background-color : #E4F5F5;
-  margin    : 10;
-  padding   : 10px;
-  border    : 10px;
-  overflow  : hidden;
-  z-index   : 2;
+
+#welcome {
+  header {
+    text-align: center;
+    padding-top: 20px;
+  }
 }
+
+#auth-container {
+  background: $aqua-green;
+}
+
+#ispick-logo {
+  width: 300px;
+  height: 90px;
+}
+
+#catch {
+  padding: 10px 0;
+  font-size: $defaultFontSize + 4;
+}
+
+#auth-form {
+  background: rgba($white, 0.8);
+  border-radius: 4px;
+  margin: 20px 0;
+  padding: 20px;
+  a {
+    text-align: left;
+    display: block;
+  }
+  p {
+    margin-bottom: 20px;
+  }
+  i {
+    margin-right: 10px;
+  }
+}
+
+.btn-facebook {
+  @include btn($facebook, $milky-white, 10px 20px, 0, "", "center");
+}
+
+.btn-twitter {
+  @include btn($twitter, $milky-white, 10px 20px, 0, "", "center");
+}
+
+.btn-pinterest {
+  @include btn($pinterest, $milky-white, 10px 20px, 0, "", "center");
+}
+
+.btn-email {
+  @include btn(darken($aqua-green, 10%), $milky-white, 10px 20px, 0, "", "center");
+}
+
+#other-paths {
+  @include setListMark("arrow-aqua-green.svg");
+  margin-top: 20px;
+}
+
+#features {
+  ul {
+    @include outer-container;
+  }
+  li {
+    @include span-columns(4);
+  }
+  margin: 20px 0;
+  li {
+    background: $white;
+    color: $gray;
+    border-radius: 4px;
+    padding: 20px;
+    h2 {
+      height: 2em;
+      font-weight: 700;
+      margin: 0 0 20px 0;
+      color: $aqua-green;
+    }
+    .description {
+      height: 4.5em;
+      line-height: 1.5em;
+    }
+  }
+}
+
 .wrapper-sign-in {
   position  : relative;
   width     : 300px;
@@ -30,18 +107,6 @@
   border    : 10px;
   overflow  : hidden;
   z-index   : 2;
-}
-.link-sign-in a {
-  color: #000;
-  text-decoration: none;
-  &:visited {
-    color: #000;
-  }
-  &:hover {
-    color: #000;
-    background-color: #E4F5F5;
-    text-decoration: underline;
-  }
 }
 
 .btn-group-oauth {
