--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,10 @@
-<div id='footer'>
-  <hr>
-  <p>(c) 2014 Ispick. All Rights Reserved.</p>
-</div>
+<footer>
+  <nav>
+    <ul>
+      <li><%= link_to "Home", "/" %></li>
+      <li><%= link_to "Terms of Service", "#" %></li>
+      <li><%= link_to "Privacy Policy", "#" %></li>
+    </ul>
+  </nav>
+  <p id="copyright">(c) 2014 Ispick.</p>
+</footer>
