--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -25,7 +25,7 @@
       </p>
       <p class="btn-email">
         <%= link_to("/sign_up") do %>
-          <i class="fa fa-envelope"></i>Continue with E-mail
+          <i class="fa fa-envelope"></i>Continue with Email
         <% end %>
       </p>
       <ul id="other-paths">
