--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -12,7 +12,8 @@
   }
 }
 
-#welcome {
+#welcome,
+#devise {
   header {
     text-align: center;
     padding-top: 20px;
@@ -21,6 +22,14 @@
 
 #auth-container {
   background: $aqua-green;
+  padding: 20px 0 0;
+  .description {
+    color: $white;
+    text-align: center;
+    h2 {
+      margin-bottom: 20px;
+    }
+  }
 }
 
 #ispick-logo {
@@ -34,7 +43,7 @@
 }
 
 #auth-form {
-  background: rgba($white, 0.8);
+  background: $milky-white;
   border-radius: 4px;
   margin: 20px 0;
   padding: 20px;
@@ -48,22 +57,25 @@
   i {
     margin-right: 10px;
   }
+  p[class^="btn-"] a {
+    font-size: $defaultFontSize;
+  }
 }
 
 .btn-facebook {
-  @include btn($facebook, $milky-white, 10px 20px, 0, "", "center");
+  @include btn($facebook, $white, 10px 20px, 0, "", "center");
 }
 
 .btn-twitter {
-  @include btn($twitter, $milky-white, 10px 20px, 0, "", "center");
+  @include btn($twitter, $white, 10px 20px, 0, "", "center");
 }
 
 .btn-pinterest {
-  @include btn($pinterest, $milky-white, 10px 20px, 0, "", "center");
+  @include btn($pinterest, $white, 10px 20px, 0, "", "center");
 }
 
 .btn-email {
-  @include btn(darken($aqua-green, 10%), $milky-white, 10px 20px, 0, "", "center");
+  @include btn(darken($aqua-green, 10%), $white, 10px 20px, 0, "", "center");
 }
 
 #other-paths {
@@ -97,18 +109,29 @@
   }
 }
 
-.wrapper-sign-in {
-  position  : relative;
-  width     : 300px;
-  height    : 450px;
-  background-color : #E4F5F5;
-  margin    : 10;
-  padding   : 10px;
-  border    : 10px;
-  overflow  : hidden;
-  z-index   : 2;
-}
-
-.btn-group-oauth {
-  width     : 280px;
+#devise {
+  #auth-form {
+    @include span-columns(4);
+    @include shift(4);
+  }
+  .description {
+    @include span-columns(6);
+    @include shift(3);
+  }
+  .description {
+    text-align: left;
+    h2 {
+      border-bottom: 2px solid $white;
+    }
+  }
+  #auth-form {
+    h2 {
+      font-size: $defaultFontSize + 2;
+      margin: 30px 0 10px;
+    }
+  }
+  input[type="submit"] {
+    @include btn-submit(darken($aqua-green, 10%), $white, 10px 20px, 0 15%, "", "center");
+    width: 70%;
+  }
 }
