--- a/app/views/pages/signup_with_password.html.erb
+++ b/app/views/pages/signup_with_password.html.erb
@@ -1,21 +1,33 @@
-<h1><strong>Ispick v0.3</strong></h1>
-<p>Ispick is an illustration aggregation service!</p>
+<% @pageId = "devise" %>
 
-<div class="top-image">
-  <%= link_to (image_tag asset_path('top_madoka.jpg')), '/', style: " z-index: 1;"%>
-</div>
+<%= render "shared/welcome_header" %>
 
-<div class="wrapper-oauth">
-  <div class="btn-group-vertical btn-group-oauth">
-    <%= button_group do %>
-      <%= bs_button_to 'Create an account with Facebook', user_omniauth_authorize_path(:facebook), class: "btn btn-default btn-block" %><br>
-      <%= bs_button_to 'Create an account with Twitter', user_omniauth_authorize_path(:twitter), class: "btn btn-default btn-block" %><br>
-      <%= bs_button_to 'Create an account with Pinterest', '/', class: "btn btn-default btn-block" %><br>
-      <%= bs_button_to 'Create an account with Email', '/sign_up', class: "btn btn-default btn-block" %><br>
-    <% end %>
-  </div>
-  <br>
-  <div align="center">
-    <%= bs_button_to 'Login', '/signin_with_password', class: 'btn-mini btn-default' %>
+<div id="auth-container">
+  <div class="outer-container">
+    <div id="auth-form">
+      <p class="btn-facebook">
+        <%= link_to(user_omniauth_authorize_path(:facebook)) do %>
+          <i class="fa fa-facebook"></i>Create an account with Facebook
+        <% end %>
+      </p>
+      <p class="btn-twitter">
+        <%= link_to(user_omniauth_authorize_path(:twitter)) do %>
+          <i class="fa fa-twitter"></i>Create an account with Twitter
+        <% end %>
+      </p>
+      <p class="btn-pinterest">
+        <%= link_to("#") do %>
+          <i class="fa fa-pinterest"></i>Create an account with Pinterest
+        <% end %>
+      </p>
+      <p class="btn-email">
+        <%= link_to("/sign_up") do %>
+          <i class="fa fa-envelope"></i>Create an account with Email
+        <% end %>
+      </p>
+      <ul id="other-paths">
+        <li><%= link_to "Log in", "/signin_with_password" %></li>
+      </ul>
+    </div>
   </div>
 </div>
