--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -123,7 +123,7 @@ body {
   color: $gray;
   font-size: $defaultFontSize;
   background: {
-    color: $white;
+    color: $milky-white;
   }
   @include media($tablet) { font-size: $defaultFontSize - 2; }
 }
