--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -18,6 +18,7 @@
       <%= navbar_dropdown 'DEBUG' do %>
         <%= navbar_item 'View all images', images_path %>
         <%= navbar_item 'Debug illust detection', debug_illust_detection_users_path %>
+        <%= navbar_item 'Debug crawling', debug_crawling_users_path %>
         <%= navbar_item 'Tutorial', '/tutorial' %>
         <%= navbar_item 'Top page', '/' %>
         <%= navbar_item 'Resque', '/resque_web/overview' %>
