--- a/app/views/users/debug_illust_detection.html.erb
+++ b/app/views/users/debug_illust_detection.html.erb
@@ -14,16 +14,10 @@
   <li><%= link_to '実写のみ', { controller: 'users', action: 'debug_illust_detection', illust: 'photo' } %></li>
 <% end %>
 
-<p>
-  <strong>Delivered images count:</strong>
-  <%= current_user.delivered_images.count %>
-</p>
-
-
-<%= paginate @delivered_images %>
+<%= paginate @images %>
 <div class="wrap">
-  <% @delivered_images.each do |delivered_image| %>
-    <% image = delivered_image.image %>
+  <% @images.each do |delivered_image| %>
+    <% image = delivered_image %>
     <% next if delivered_image.avoided %>
     <div class="box">
       <div class="boxInner">
@@ -36,11 +30,11 @@
         <br>
         <%= "Favorites: #{image.favorites.to_s}" if image %>
 
-        <%= link_to image_tag(image.data.url(:thumb)), { controller: 'delivered_images', action: 'show', id: delivered_image.id.to_s, remote: true, 'data-toggle' => "modal", 'data-target' => '#modal-image' } %>
+        <%= link_to image_tag(image.data.url(:thumb)), { controller: 'images', action: 'show', id: delivered_image.id.to_s, remote: true, 'data-toggle' => "modal", 'data-target' => '#modal-image' } %>
         <div class="titleBox"><%= image.title.to_s %></div>
       </div>
     </div>
   <% end %>
 </div>
 
-<%= paginate @delivered_images %>
+<%= paginate @images %>
