--- a/app/views/target_words/_form.html.erb
+++ b/app/views/target_words/_form.html.erb
@@ -14,10 +14,11 @@
   <div class="row">
     <div class="col-lg-2">
       <%= f.text_field :word %>
+      <%= hidden_field_tag :debug, true %>
     </div>
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit(debug: true) %>
   </div>
 <% end %>
