--- a/app/views/users/show_target_words.html.erb
+++ b/app/views/users/show_target_words.html.erb
@@ -10,6 +10,17 @@ Find a tag from the database:
 <br />
 <br />
 
+<h3>Popular tags</h3>
+<div class="popular-tags">
+  Tags frequently followed:<br />
+  <%= button_group do %>
+    <% get_popular_tags(20).each do |target_word| %>
+      <%= bs_button_to target_word.word, '/', class: 'btn btn-default' %>
+    <% end %>
+  <% end %>
+</div>
+
+
 <h3>List of followed tags</h3>
 <div class="tag-list">
 <table class="table table-striped">
