--- a/app/views/shared/_popover_board.html.erb
+++ b/app/views/shared/_popover_board.html.erb
@@ -1,7 +1,7 @@
 <%= javascript_include_tag 'modal_board' %>
 
 
-<!-- close buttonを機能させる
+<!-- TODO: close buttonを機能させる
 <button id="popovercloseid" type="button" class="close">&times;</button>
 -->
 
