--- a/app/views/users/show_target_words.html.erb
+++ b/app/views/users/show_target_words.html.erb
@@ -13,10 +13,9 @@ Find a tag from the database:
 <h3>Popular tags</h3>
 <div class="popular-tags">
   Tags frequently followed:<br />
-  <%= button_group do %>
-    <% get_popular_tags(20).each do |target_word| %>
-      <%= bs_button_to target_word.word, '/', class: 'btn btn-default' %>
-    <% end %>
+  <% get_popular_tags(20).each do |target_word| %>
+    <%= bs_button_to target_word.word, { controller: 'target_words', action: 'create', id: target_word.person.id, target_word: { word: target_word.word }}, method: :post, class: 'btn btn-default' %>
+    <%= target_word.users_count %>
   <% end %>
 </div>
 
