--- a/app/views/shared/_render_image.html.erb
+++ b/app/views/shared/_render_image.html.erb
@@ -1,3 +1,7 @@
 <div align="center">
-  <%= image_tag image.data.url(:medium) %>
+  <% if image.page_url %>
+    <%= link_to image_tag(image.data.url(:medium)), image.page_url.html_safe %>
+  <% else %>
+    <%= image_tag image.data.url(:medium) %>
+  <% end %>
 </div>
