--- a/app/views/shared/_show_image.html.erb
+++ b/app/views/shared/_show_image.html.erb
@@ -53,9 +53,11 @@
     </tr>
     <tr>
       <th align="left">Tags</th>
-      <td><% image.tags.each do |tag| %>
-        <%= tag.name %>
-      <% end %></td>
+      <td>
+        <% image.tags.each do |tag| %>
+          <%= link_to tag.name, { controller: 'users', action: 'search', query: "#{tag.name}" } %>
+        <% end %>
+      </td>
     </tr>
     <tr>
       <th align="left">Size in bytes[KB]</th>
