--- a/app/views/target_words/_form.html.erb
+++ b/app/views/target_words/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="row">
     <div class="col-lg-2">
-      <%= f.text_field :word %>
+      <%= f.text_field :name %>
       <%= hidden_field_tag :debug, true %>
     </div>
   </div>
