--- a/app/views/users/show_target_words.html.erb
+++ b/app/views/users/show_target_words.html.erb
@@ -14,7 +14,7 @@ Find a tag from the database:
 <div class="popular-tags">
   Tags frequently followed:<br />
   <% get_popular_tags(20).each do |target_word| %>
-    <%= bs_button_to target_word.word, { controller: 'target_words', action: 'create', id: target_word.person.id, target_word: { word: target_word.word }}, method: :post, class: 'btn btn-default' %>
+    <%= bs_button_to target_word.name, { controller: 'target_words', action: 'create', id: target_word.person.id, target_word: { name: target_word.name }}, method: :post, class: 'btn btn-default' %>
     <%= target_word.users_count %>
   <% end %>
 </div>
@@ -22,7 +22,7 @@ Find a tag from the database:
 <div class="popular-tags">
   Tags with images:<br />
   <% get_tags_with_images(20).each do |target_word| %>
-    <%= bs_button_to target_word.word, { controller: 'target_words', action: 'create', id: target_word.person.id, target_word: { word: target_word.word }}, method: :post, class: 'btn btn-default' %>
+    <%= bs_button_to target_word.name, { controller: 'target_words', action: 'create', id: target_word.person.id, target_word: { name: target_word.name }}, method: :post, class: 'btn btn-default' %>
     <%= target_word.images_count %>
   <% end %>
 </div>
@@ -41,7 +41,7 @@ Find a tag from the database:
   <tbody>
     <% @words.each do |target_word| %>
       <tr>
-        <td><%= link_to target_word.word, show_delivered_target_word_path(target_word) %></td>
+        <td><%= link_to target_word.name, show_delivered_target_word_path(target_word) %></td>
         <td>
           <%= bs_button_to 'Unfollow', delete_target_word_users_path({ id: target_word.id }), method: :delete, class: 'btn-default' %>
           <%= bs_button_to 'debug', target_word, class: 'btn-default' %>
