#213 Improve the appearance of the template

--- a/app/views/users/show_target_words.html.erb
+++ b/app/views/users/show_target_words.html.erb
@@ -9,22 +9,34 @@ Find a tag from the database:
 <i>You can still follow a custom tag at the "<%= link_to 'debug_crawling', debug_crawling_users_path %>" page.</i>
 <br />
 <br />
-<h3>Popular tags</h3>
-<div class="popular-tags">
-  <% get_tags_with_images(20).each do |target_word| %>
-    <%= bs_button_to target_word.name, { controller: 'target_words', action: 'create', id: target_word.person.id, target_word: { name: target_word.name }}, method: :post, class: 'btn btn-default' %>
-    <%# target_word.images_count %>
-  <% end %>
+<div class="wrapper-popular-tags">
+  <h3>Popular tags</h3>
+  <div class="popular-tags">
+    <%# get_tags_with_images(20).each do |target_word| %>
+    <% TargetWord.all.limit(50).each do |target_word| %>
+      <%= bs_button_to target_word.name, { controller: 'target_words', action: 'create', id: target_word.person.id, target_word: { name: target_word.name }}, method: :post, class: 'btn btn-default' unless target_word.person.nil? %>
+      <%# target_word.images_count %>
+    <% end %>
+  </div>
 </div>
 
+<div class="arrow">></div>
 
-<h3>List of followed tags</h3>
-<div class="tag-list">
-  <% @words.each do |target_word| %>
-    <%= button_group do %>
-      <%= bs_button_to target_word.name, show_delivered_target_word_path(target_word), class: 'btn-default' %>
-      <%= bs_button_to 'X', delete_target_word_users_path({ id: target_word.id }), method: :delete, class: 'btn-default' %>
-      <%= bs_button_to 'D', target_word, class: 'btn-default' %>
+<div class="wrapper-followed-tags">
+  <h3>List of followed tags</h3>
+  <div class="followed-tags">
+    <% @words.each do |target_word| %>
+      <%= button_group do %>
+        <%= bs_button_to target_word.name, show_delivered_target_word_path(target_word), class: 'btn-default' %>
+        <%= bs_button_to 'X', delete_target_word_users_path({ id: target_word.id }), method: :delete, class: 'btn-default' %>
+        <%= bs_button_to 'D', target_word, class: 'btn-default' %>
+      <% end %>
     <% end %>
-  <% end %>
+  </div>
+</div>
+
+<div style="clear: both;">
+  <br />
+  <br />
+  <br />
 </div>
