#213 Add search form in the template

--- a/app/views/users/show_target_words.html.erb
+++ b/app/views/users/show_target_words.html.erb
@@ -1,21 +1,35 @@
 <%= stylesheet_link_tag 'users' %>
 
 
-<h3>Follow a tag</h3>
-Find a tag from the database:
+<h2>Preferences</h2>
+You can follow a tag to make an image feed related to the tag.
 <br />
-<%= bs_button_to 'Search a target_word', search_target_words_path, class: 'btn-default' %>
+<%= search_form_for @search, url: show_target_words_users_path, html: { method: :post } do |f| %>
+  <%# f.label :name_display_cont, 'Character name' %>
+  <div class="row">
+    <div class="col-lg-2">
+      <%= f.text_field :titles_name_or_titles_name_english_or_name_or_name_or_name_english_or_name_display_cont, class: "form-control" %>
+    </div>
+  </div>
+  <div class="actions">
+    <%= f.submit 'Search', class: "btn btn-default" %>
+  </div>
+<% end %>
 <br />
-<i>You can still follow a custom tag at the "<%= link_to 'debug_crawling', debug_crawling_users_path %>" page.</i>
-<br />
-<br />
+
 <div class="wrapper-popular-tags">
   <h3>Popular tags</h3>
   <div class="popular-tags">
-    <%# get_tags_with_images(20).each do |target_word| %>
-    <% TargetWord.all.limit(50).each do |target_word| %>
-      <%= bs_button_to target_word.name, { controller: 'target_words', action: 'create', id: target_word.person.id, target_word: { name: target_word.name }}, method: :post, class: 'btn btn-default' unless target_word.person.nil? %>
-      <%# target_word.images_count %>
+    <% if @people.nil? %>
+      <%# get_tags_with_images(20).each do |target_word| %>
+      <% TargetWord.all.limit(50).each do |target_word| %>
+        <%= bs_button_to target_word.name, { controller: 'target_words', action: 'create', id: target_word.person.id, target_word: { name: target_word.name }}, method: :post, class: 'btn btn-default' unless target_word.person.nil? %>
+        <%# target_word.images_count %>
+      <% end %>
+    <% else %>
+      <% @people.each do |person| %>
+        <%= bs_button_to person.name_display, { controller: 'target_words', action: 'create', id: person.id, target_word: { name: person.name_display }}, method: :post, class: 'btn btn-default' %>
+      <% end %>
     <% end %>
   </div>
 </div>
@@ -23,7 +37,7 @@ Find a tag from the database:
 <div class="arrow">></div>
 
 <div class="wrapper-followed-tags">
-  <h3>List of followed tags</h3>
+  <h3>Followed tags</h3>
   <div class="followed-tags">
     <% @words.each do |target_word| %>
       <%= button_group do %>
