--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -52,8 +52,8 @@ span.glyphicon {
 // タグ登録ページで使用
 .arrow {
   position: relative;
-  top: 150px;
-  left: 20px;
+  top: 175px;
+  left: 10px;
   float: left;
   width: 80px;
   font-size: 50pt;
@@ -69,10 +69,14 @@ span.glyphicon {
 .popular-tags {
   width: 400px;
   height: 300px;
+  border-style: solid;
+  border-color: #C3C3C3;
   overflow-y: scroll;
 }
 .followed-tags {
   width: 400px;
   height: 300px;
+  border-style: solid;
+  border-color: #C3C3C3;
   overflow-y: scroll;
 }
