#213 Fix the bug that renders the form when it fails to save a target_word

--- a/app/views/users/show_target_words.html.erb
+++ b/app/views/users/show_target_words.html.erb
@@ -27,7 +27,7 @@ You can follow a tag to make an image feed related to the tag.
       <% end %>
     <% else %>
       <% @people.each do |person| %>
-        <%= bs_button_to person.name_display, { controller: 'target_words', action: 'create', id: person.id, target_word: { name: person.name_display }}, method: :post, class: 'btn btn-default' %>
+        <%= bs_button_to person.name_display, { controller: 'target_words', action: 'create', id: person.id, target_word: { name: person.name_display }}, method: :post, remote: true, class: 'btn btn-default' %>
       <% end %>
     <% end %>
   </div>
