#276 Add debug data in the 'View all images' page
Add a helper method of ImagesHelper module.

--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -15,3 +15,5 @@
 <hr>
 <h5>Debug</h5>
 <li><%= "Number of images with nil data: #{Image.where(data_file_size: nil).count}" %></li>
+<li><%= "Count of all images: #{Image.count}" %></li>
+<li><%= "Size of all images: #{get_sizeof_all} MB" %></li>
