#280 Enable running the miniprofiler gem also in production env

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -22,6 +22,7 @@
         <%= navbar_item 'Tutorial', '/tutorial' %>
         <%= navbar_item 'Top page', '/' %>
         <%= navbar_item 'Resque', '/resque_web/overview' %>
+        <%= navbar_item 'Toggle miniprofiler', toggle_miniprofiler_users_path %>
       <% end %>
     <% end %>
 
