--- a/app/views/users/signed_in.html.erb
+++ b/app/views/users/signed_in.html.erb
@@ -1,6 +1,7 @@
 <%= javascript_include_tag 'users_home' %>
 <%= javascript_include_tag 'core' %>
 <%= stylesheet_link_tag 'users' %>
+<%= stylesheet_link_tag 'images_detail' %>
 <%= render 'shared/modal_image' %>
 
 
