--- a/app/assets/stylesheets/images_detail.css.scss
+++ b/app/assets/stylesheets/images_detail.css.scss
@@ -1,7 +1,12 @@
 // 画像詳細画面で使用するクラスを定義
 
 .image-title {
-  font-size: 24pt;
+  font-size: 20pt;
+  width: 560px;
+  float: left;
+}
+.image-buttons {
+  align: right;
 }
 .image-info {
   align: left;
