#282 Temporarily implement the debug showing button

--- a/app/views/users/signed_in.html.erb
+++ b/app/views/users/signed_in.html.erb
@@ -34,7 +34,7 @@
           <div class="id"><%= delivered_image.id %></div>
           <%= button_group class: 'pull-right blocks' do %>
             <%= render_clip_button(delivered_image) %>
-            <%= render_show_button(delivered_image) %>
+            <%= render_show_debug_button(delivered_image) %>
           <% end %>
           <br />
         </div>
