--- a/app/views/layouts/_show_image_debug1.html.erb
+++ b/app/views/layouts/_show_image_debug1.html.erb
@@ -1,3 +1,5 @@
+<%= render partial: 'shared/render_image', locals: { image: @image } %>
+
 <p>
   <strong>Source URL:</strong>
   <%= link_to "#{image.src_url}", image.src_url %>
@@ -25,11 +27,11 @@
     </tr>
     <tr>
       <th align="left">Created_at</th>
-      <td><%= get_jst_string(displaying_image.created_at) %></td>
+      <td><%= get_jst_string(image.created_at) %></td>
     </tr>
     <tr>
       <th align="left">Updated_at</th>
-      <td><%= get_jst_string(displaying_image.updated_at) %></td>
+      <td><%= get_jst_string(image.updated_at) %></td>
     </tr>
     <tr>
       <th align="left">Posted_at</th>
@@ -67,8 +69,8 @@
       <td><%= image.id %></td>
     </tr>
     <tr>
-      <th align="left">id of displaying_image</th>
-      <td><%= displaying_image.id %></td>
+      <th align="left">id of image</th>
+      <td><%= image.id %></td>
     </tr>
     <tr>
       <th align="left">raw image size</th>
