--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -64,28 +64,40 @@ body {
 }
 .boxInner .titleBox {
    position: absolute;
-   visibility: hidden;
-   top: 0px;
+   //visibility: hidden;
+   //top: 0px;
+   bottom: 0px;
    left: 0px;
    right: 0px;
-   margin-bottom: 0px;
-   color: #FFF;
-   padding: 10px;
-}
-.title {
-  text-align: center;
-  position: absolute;
-   bottom: 0;
-   left: 0;
-   right: 0;
+
+   //margin-bottom: -100px;
    margin-bottom: 0px;
    background: #000;
    background: rgba(0, 0, 0, 0.5);
    color: #FFF;
    padding: 10px;
-}
 
+   -webkit-transition: all 0.3s ease-out;
+   -moz-transition: all 0.3s ease-out;
+   -o-transition: all 0.3s ease-out;
+   transition: all 0.3s ease-out;
+}
+.title {
+  text-align: center;
+  /*position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin-bottom: 0px;
+  background: #000;
+  background: rgba(0, 0, 0, 0.5);
+  color: #FFF;
+  padding: 10px;*/
+}
 body.no-touch .boxInner:hover .titleBox, body.touch .boxInner.touchFocus .titleBox {
+   margin-bottom: 0;
+}
+/*body.no-touch .boxInner:hover .titleBox, body.touch .boxInner.touchFocus .titleBox {
    margin-bottom: 0;
    color: #FFF;
    visibility: visible;
@@ -94,7 +106,7 @@ body.no-touch .boxInner.hovered .titleBox, body.touch .boxInner.touchFocus .titl
    margin-bottom: 0;
    color: #FFF;
    visibility: visible;
-}
+}*/
 
 
 @media only screen and (max-width : 480px) {
