#287 Move some methods from UsersHelper to model classes

--- a/app/views/users/show_target_words.html.erb
+++ b/app/views/users/show_target_words.html.erb
@@ -17,7 +17,7 @@ You can follow a tag to make an image feed related to the tag.
 <br />
 
 <div class="wrapper-popular-tags">
-  <%= render partial: 'users/popular_tags', locals: { people: @people } %>
+  <%= render partial: 'users/popular_tags', locals: { people: @people, popular_tags: @popular_tags } %>
 </div>
 
 <div class="arrow">></div>
