--- a/app/views/users/show_favored_images.html.erb
+++ b/app/views/users/show_favored_images.html.erb
@@ -9,7 +9,7 @@
 </p>
 <p>
   <strong>Total size of clipped images in bytes:</strong>
-  <%= bytes_to_megabytes(get_total_size(@favored_images)) %> MB<br />
+  <%= @total_size %> MB<br />
 </p>
 <%= link_to 'Download zip(Debug)', controller: 'users', action: 'download_favored_images' %>
 <br />
