--- a/app/views/pages/signup_with_password.html.erb
+++ b/app/views/pages/signup_with_password.html.erb
@@ -10,7 +10,7 @@
     <%= button_group do %>
       <%= bs_button_to 'Create an account with Facebook', user_omniauth_authorize_path(:facebook), class: "btn btn-default btn-block" %><br>
       <%= bs_button_to 'Create an account with Twitter', user_omniauth_authorize_path(:twitter), class: "btn btn-default btn-block" %><br>
-      <%= bs_button_to 'Create an account with Pinterest', '/', class: "btn btn-default btn-block" %><br>
+      <%= bs_button_to 'Create an account with Tumblr', user_omniauth_authorize_path(:tumblr), class: "btn btn-default btn-block" %><br>
       <%= bs_button_to 'Create an account with Email', '/sign_up', class: "btn btn-default btn-block" %><br>
     <% end %>
   </div>
