--- a/app/views/users/show_favored_images.html.erb
+++ b/app/views/users/show_favored_images.html.erb
@@ -2,18 +2,21 @@
 <%= stylesheet_link_tag 'users' %>
 
 
-<!-- 統計情報とボード選択dropdownを描画 -->
+<!-- Debug情報とボード選択dropdownを描画 -->
 <p>
   <strong>Clipped images count:</strong>
   <%= @favored_images.count %>
-</p>
-<p>
+  <br />
   <strong>Total size of clipped images in bytes:</strong>
-  <%= @total_size %> MB<br />
+  <%= @total_size %> MB
+  <br />
+  <%= link_to 'Download zip(Debug)', controller: 'users', action: 'download_favored_images' %>
+  <br />
+  <br />
 </p>
-<%= link_to 'Download zip(Debug)', controller: 'users', action: 'download_favored_images' %>
-<br />
-<br />
+
+
+<!-- Board選択/編集/削除を行うUIを描画 -->
 <%= button_group do %>
   <%= bs_dropdown_button_to 'Select a board' do %>
     <% current_user.image_boards.each do |board| %>
@@ -22,14 +25,11 @@
       </li>
     <% end %>
   <% end %>
-
-  <button class="btn btn-default">
-    <span class="glyphicon glyphicon-remove" style="vertical-align:middle"></span> Delete
-  </button>
+  <%= bs_button_to '<span class="glyphicon glyphicon-remove" style="vertical-align:middle"></span>Delete'.html_safe, @image_board, method: :delete, data: { confirm: 'Are you sure to delete this board? This operation cannot be undone.' }, class: 'btn btn-default' %>
 <% end %>
 
 
-<!-- お気に入り画像を表示 -->
+<!-- 選択されているBoardの画像一覧を表示 -->
 <div class="wrap">
   <% @favored_images.each do |image| %>
     <div class="box">
@@ -38,18 +38,11 @@
         <div class="titleBox">
           <%= button_group class: 'pull-right blocks' do %>
             <%= render_unclip_button(image) %>
-            <%# render_show_button(image) %>
+            <%= render_show_button(image) %>
           <% end %>
         </div>
         <div class="title">
           <%= image.title.to_s %><br />
-          <div class="image-tag">
-            <%# bs_label image.target_words.first.word, :default, class: 'label label-default' %>
-          </div>
-          <div class="time-string">
-            <%# "CA: #{get_jst_string(image.created_at)}" %><br />
-            <%# "PA: #{get_jst_string(image.image.posted_at)}" %>
-          </div>
         </div>
       </div>
     </div>
